version 1.3.0 adding velocity support